--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "@radix-ui/react-tooltip": "^1.2.7",
         "@react-three/drei": "^10.4.4",
         "@react-three/fiber": "^9.0.0-alpha.8",
+        "@supabase/ssr": "^0.7.0",
+        "@supabase/supabase-js": "^2.79.0",
         "@tabler/icons-react": "^3.35.0",
         "@tailwindcss/typography": "^0.5.19",
         "@tsparticles/engine": "^3.8.1",
@@ -51,14 +53,15 @@
         "atmn": "^0.0.28",
         "autumn-js": "^0.1.43",
         "bcrypt": "^6.0.0",
-        "better-auth": "1.3.10",
+        "better-auth": "^1.3.10",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "cobe": "^0.6.5",
         "date-fns": "^4.1.0",
+        "dotenv": "^17.2.3",
         "dotted-map": "^2.2.3",
-        "drizzle-kit": "^0.31.6",
+        "drizzle-kit": "^0.18.1",
         "drizzle-orm": "^0.44.7",
         "embla-carousel-auto-scroll": "^8.6.0",
         "embla-carousel-autoplay": "^8.6.0",
@@ -70,8 +73,9 @@
         "mini-svg-data-uri": "^1.4.4",
         "motion": "^12.23.24",
         "motion-dom": "^12.23.23",
-        "next": "15.3.5",
+        "next": "^15.5.6",
         "next-themes": "^0.4.6",
+        "postgres": "^3.4.7",
         "qss": "^3.0.0",
         "react": "^19.0.0",
         "react-day-picker": "^9.8.0",
@@ -83,7 +87,7 @@
         "react-intersection-observer": "^10.0.0",
         "react-resizable-panels": "^3.0.3",
         "react-responsive-masonry": "^2.7.1",
-        "react-syntax-highlighter": "^15.6.1",
+        "react-syntax-highlighter": "^16.1.0",
         "react-wrap-balancer": "^1.1.1",
         "recharts": "^3.0.2",
         "simplex-noise": "^4.0.3",
