integerated the cloudinary sucssfully

--- a/.env.local
+++ b/.env.local
@@ -9,3 +9,8 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Database URL (Supabase PostgreSQL) - Direct connection
 DATABASE_URL=postgresql://postgres:saran2006@db.vghxjycaezcgmatximnn.supabase.co:5432/postgres
+
+#cloudinary 
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dlt5ersuq
+CLOUDINARY_API_KEY=668467671193225
+CLOUDINARY_API_SECRET=sh8rGwDD-qZ2D-9Y4TP1yf8D5ik
