--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "bcrypt": "^6.0.0",
         "better-auth": "^1.3.10",
         "class-variance-authority": "^0.7.1",
+        "cloudinary": "^2.8.0",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "cobe": "^0.6.5",
