--- a/package.json
+++ b/package.json
@@ -103,13 +103,13 @@
         "three": "^0.178.0",
         "three-globe": "^2.43.0",
         "vaul": "^1.1.2",
-        "zod": "^4.1.12"
+        "zod": "^4.1.12",
+        "@tailwindcss/postcss": "^4",
+        "lightningcss": "^1.28.3"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
-        "@tailwindcss/postcss": "^4",
         "@testing-library/jest-dom": "^6.9.1",
-        "lightningcss": "^1.28.3",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
         "@types/jest": "^30.0.0",
