--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "app",
     "version": "0.1.0",
     "private": true,
+    "engines": {
+        "node": ">=24.4.0"
+    },
     "scripts": {
         "dev": "next dev --turbopack",
         "build": "next build",
@@ -9,7 +12,8 @@
         "lint": "next lint",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "postinstall": "npm dedupe && npm rebuild lightningcss || true"
     },
     "dependencies": {
         "@babel/parser": "^7.28.5",
@@ -49,6 +53,8 @@
         "@supabase/ssr": "^0.7.0",
         "@supabase/supabase-js": "^2.79.0",
         "@tabler/icons-react": "^3.35.0",
+        "@tailwindcss/oxide": "^4.1.12",
+        "@tailwindcss/postcss": "^4",
         "@tailwindcss/typography": "^0.5.19",
         "@tsparticles/engine": "^3.8.1",
         "@tsparticles/react": "^3.0.0",
@@ -65,7 +71,7 @@
         "date-fns": "^4.1.0",
         "dotenv": "^17.2.3",
         "dotted-map": "^2.2.3",
-        "drizzle-kit": "^0.18.1",
+        "drizzle-kit": "^0.31.6",
         "drizzle-orm": "^0.44.7",
         "embla-carousel-auto-scroll": "^8.6.0",
         "embla-carousel-autoplay": "^8.6.0",
@@ -73,6 +79,7 @@
         "estree-walker": "2.0.2",
         "framer-motion": "^12.23.24",
         "input-otp": "^1.4.2",
+    "lightningcss": "1.30.2",
         "lucide-react": "^0.552.0",
         "mini-svg-data-uri": "^1.4.4",
         "motion": "^12.23.24",
@@ -103,9 +110,7 @@
         "three": "^0.178.0",
         "three-globe": "^2.43.0",
         "vaul": "^1.1.2",
-        "zod": "^4.1.12",
-        "@tailwindcss/postcss": "^4",
-        "lightningcss": "^1.28.3"
+        "zod": "^4.1.12"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
