--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "engines": {
-        "node": ">=24.4.0"
+        "node": "22.x"
     },
     "scripts": {
         "dev": "next dev --turbopack",
