--- a/package.json
+++ b/package.json
@@ -56,6 +56,17 @@
         "@tailwindcss/oxide": "^4.1.12",
         "@tailwindcss/postcss": "^4",
         "@tailwindcss/typography": "^0.5.19",
+        "@tiptap/extension-highlight": "^3.11.1",
+        "@tiptap/extension-image": "^3.11.1",
+        "@tiptap/extension-link": "^3.11.1",
+        "@tiptap/extension-placeholder": "^3.11.1",
+        "@tiptap/extension-subscript": "^3.11.1",
+        "@tiptap/extension-superscript": "^3.11.1",
+        "@tiptap/extension-text-align": "^3.11.1",
+        "@tiptap/extension-underline": "^3.11.1",
+        "@tiptap/extension-youtube": "^3.11.1",
+        "@tiptap/react": "^3.11.1",
+        "@tiptap/starter-kit": "^3.11.1",
         "@tsparticles/engine": "^3.8.1",
         "@tsparticles/react": "^3.0.0",
         "@tsparticles/slim": "^3.8.1",
@@ -71,7 +82,7 @@
         "date-fns": "^4.1.0",
         "dotenv": "^17.2.3",
         "dotted-map": "^2.2.3",
-        "drizzle-kit": "^0.31.6",
+        "drizzle-kit": "^0.31.7",
         "drizzle-orm": "^0.44.7",
         "embla-carousel-auto-scroll": "^8.6.0",
         "embla-carousel-autoplay": "^8.6.0",
@@ -79,7 +90,7 @@
         "estree-walker": "2.0.2",
         "framer-motion": "^12.23.24",
         "input-otp": "^1.4.2",
-    "lightningcss": "1.30.2",
+        "lightningcss": "1.30.2",
         "lucide-react": "^0.552.0",
         "mini-svg-data-uri": "^1.4.4",
         "motion": "^12.23.24",
